--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.38.0
-pymongo==4.10.1
-bcrypt==4.1.2
-cryptography==43.0.3
-dnspython==2.7.0
+streamlit==1.39.0
+pymongo==4.8.0
+dnspython==2.6.1
+pandas==2.2.3
+numpy==1.26.4
+python-dotenv==1.0.1
