--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit==1.39.0
 pymongo==4.8.0
-dnspython==2.6.1
-pandas==2.2.3
-numpy==1.26.4
+bcrypt==4.1.2
+cryptography==43.0.3
 python-dotenv==1.0.1
+pandas==2.2.2
+dnspython==2.6.1
