--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 streamlit==1.39.0
 pymongo==4.8.0
-bcrypt==4.1.2
+bcrypt==4.2.0
 cryptography==43.0.3
 python-dotenv==1.0.1
-pandas==2.2.2
 dnspython==2.6.1
+pandas==2.2.3
+numpy==1.26.4
